syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.evidentdb";
option java_outer_classname = "EvidentDbService";
option objc_class_prefix = "HLW";

package com.evidentdb;

service EvidentDb {
  rpc catalogSubscription(FetchCatalogRequest) returns (stream Catalog)      {}
  rpc createDatabase(CreateDatabaseRequest)    returns (CreateDatabaseReply) {}
  rpc renameDatabase(RenameDatabaseRequest)    returns (RenameDatabaseReply) {}
  rpc deleteDatabase(DeleteDatabaseRequest)    returns (DeleteDatabaseReply) {}
}

message FetchCatalogRequest {}

message Catalog {

}

message CreateDatabaseRequest {
  string name = 1;
}

// TODO
message CreateDatabaseReply {
  string message = 1;
}

message RenameDatabaseRequest {
  string oldName = 1;
  string newName = 2;
}

// TODO
message RenameDatabaseReply {
  string message = 1;
}

message DeleteDatabaseRequest {
  string name = 1;
}

// TODO
message DeleteDatabaseReply {
  string message = 1;
}